# backend/docs/swagger.yaml
@@ -47,13 +47,22 @@ definitions:
       email:
         maxLength: 255
         type: string
+      first_name:
+        type: string
       id:
         type: integer
+      last_name:
+        type: string
       password_hash:
+        maxLength: 255
+        type: string
+      phone_number:
         maxLength: 255
         type: string
       updated_at:
         description: Set to current unix seconds on updating or if it is zero on creating
+        type: string
+      user_image:
         type: string
       user_role:
         maxLength: 25
@@ -62,7 +71,6 @@ definitions:
         type: integer
     required:
     - email
-    - password_hash
     - user_role
     - user_status
     type: object
